<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".ConsFetchActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/jusco2"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />

    <!--For Service No-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strScno"
        android:textSize="20dp"
        android:id="@+id/txtScno"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/etScno"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/text_gradient"
        android:inputType="textCapCharacters"
        android:maxLength="10"
        android:paddingLeft="10dp"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <!--For Book No-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strBook"
        android:id="@+id/txtBook"
        android:textSize="20dp"
        android:visibility="invisible"
        android:layout_marginTop="120dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etBook"
        android:layout_marginTop="100dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:inputType="number"
        android:maxLength="4"
        android:text="1"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>
    <!--For Button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="130dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:text="@string/FetchDetails"
        android:textSize="17dp"
        android:onClick="fetch_details"
        android:background="@color/colorAccent"

        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/btnFetch"/>
    <!--Details of the consumer-->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        android:padding="16dp"
        android:id="@+id/rtlConsfetch2">
        <!--name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strName"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/txtname"
            android:layout_marginTop="1dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvName"
            android:textSize="20dp"
            android:layout_marginTop="1dp"
            android:layout_centerHorizontal="true"
            />
        <!--Address-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAddr"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/txtaddr"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvaddr1"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvaddr2"
            android:textSize="20dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvaddr3"
            android:textSize="20dp"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            />
        <!--Load-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strLoad"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/txtLoad"
            android:layout_marginTop="100dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLoad"
            android:textSize="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="80dp"
            />
        <!--Meter Number-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strMtrno"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/txtMtr"
            android:layout_marginTop="130dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvmtrno"
            android:textSize="20dp"
            android:layout_marginTop="130dp"
            android:layout_centerHorizontal="true"
            />

        <!--MF-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strMF"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/txtMF"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="160dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMF"
            android:textSize="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="230dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NextButton"
            android:layout_marginTop="170dp"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:onClick="entry_sts_activity"
            style="?android:attr/borderlessButtonStyle"
            android:background="#AED6F1"

            android:textStyle="bold"
            android:id="@+id/btnNext"/>
    </RelativeLayout>
</RelativeLayout>
