<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/entry2"
    android:background="@drawable/gradient_bg">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/entryTable">
        <!--Meter Status -->
        <TableRow
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strStatus"
                android:textSize="20dp"
                android:id="@+id/txtstatus"
                />
            <Spinner
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/spStatus"
                android:layout_marginLeft="40dp"></Spinner>
        </TableRow>

        <!--Meter Observation -->
        <TableRow
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strObcode"
                android:textSize="20dp"
                android:id="@+id/txtObr"/>
            <Spinner
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/spRemarks"
                android:layout_marginLeft="10dp"/>
        </TableRow>
        <!--Present Reading -->
        <TableRow
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strReading"
                android:textSize="20dp"
                android:id="@+id/txtEread"
                />
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/etReading"
                android:background="@drawable/text_gradient"
                android:inputType="numberDecimal"
                android:maxLength="8"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/camera3"
                android:id="@+id/imgRdg"
                android:layout_marginLeft="15dp"
                android:onClick="capture_photo"/>
        </TableRow>
        <!--Current MD -->
        <TableRow
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCLoad"
                android:id="@+id/txtEcLoad"
                android:textSize="20dp"
                />
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/etCLoad"

                android:background="@drawable/text_gradient"
                android:inputType="number|numberDecimal"
                android:maxLength="4"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/camera2"
                android:id="@+id/imgMD"
                android:layout_marginLeft="15dp"
                android:onClick="CaptureMD"/>
        </TableRow>
        <!--Current PF -->
        <TableRow
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ttCurPF"
                android:text="Cur PF"
                android:textSize="20dp"
                android:visibility="visible"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/etCurPF"
                android:background="@drawable/text_gradient"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                android:maxLength="4"
                android:layout_centerHorizontal="true"
                android:visibility="visible"/>
        </TableRow>
<!--Telephone Number-->
        <TableRow
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strTelno"
                android:textSize="20dp"
                android:id="@+id/txtETelno"
                />
            <EditText
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:id="@+id/etTelno"
                android:background="@drawable/text_gradient"
                android:inputType="number|textVisiblePassword"
                android:textSize="20dp"
                android:maxLength="10"
                android:layout_centerHorizontal="true"/>
        </TableRow>
        <!--SBA ID-->
        <TableRow
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strSBAID"
                android:id="@+id/txtSBAID"
                android:textSize="20dp"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etSBAID"
                android:inputType="number"
                android:textSize="20dp"
                android:maxLength="4"
                android:background="@drawable/text_gradient"
                android:layout_centerHorizontal="true"/>
        </TableRow>
    </TableLayout>
    <!--Issue Bill Button-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strIB"
            android:textSize="20dp"
            android:id="@+id/btnIB"
            android:onClick="issuebill"
            android:textStyle="bold"
            android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
            android:textColor="@color/cast_libraries_material_featurehighlight_text_header_color"
            android:layout_marginTop="410dp"
            android:layout_marginLeft="200dp"/>

</RelativeLayout>