<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_data_loading"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".DataLoading">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:text="@string/OverwriteData"
        android:drawableTop="@drawable/ltodb4"
        android:drawablePadding="10dp"
        android:id="@+id/btnOverwrite"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/cast_libraries_material_featurehighlight_text_header_color"
        android:background="@color/colorPrimary"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="Overwrite_Data"
        />
    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/AppendData"
        android:id="@+id/btnAppend"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:onClick="Append_Data"
        android:textStyle="bold"
        android:textSize="20dp"
        android:visibility="invisible"
        android:textColor="@color/cast_libraries_material_featurehighlight_text_header_color"
        android:background="@color/colorAccent"
        style="?android:attr/borderlessButtonStyle"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:text="@string/DownloadData"
        android:id="@+id/btnDown"
        android:drawableTop="@drawable/g2db"
        android:layout_marginTop="300dp"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/cast_libraries_material_featurehighlight_text_header_color"
        android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="btndwn"/>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginBottom="77dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtprgs"
        android:text=""
        android:layout_marginTop="380dp"
        android:layout_marginLeft="270dp"
        />



</RelativeLayout>
